deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oracle-automate
  labels:
    name: oracle-automate
    app.kubernetes.io/part-of: oracle-automate
